# synqui-sdk

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  publish.sh  pyproject.toml  pytest.ini
cognitionflow/: batch_processor.py  config.py  sdk.py  workflow.py
demos/article-explainer/: .gitignore  AGENT_ARCHITECTURE_ANALYSIS.md  AGENT_FLOW_DIAGRAM.md  LICENSE  README.md  article_explainer_page.py  docker-compose.yml  pyproject.toml
demos/article-explainer/explainer/: graph.py  prompts.py
demos/article-explainer/explainer/service/: config.py  content_loader.py
docs/: ADVANCED.md  API_REFERENCE.md  BEST_PRACTICES.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  EXAMPLES.md  GETTING_STARTED.md  TROUBLESHOOTING.md  __init__.py  index.md  quick-start.md
docs-v2/: index.md
docs-v2/agent-frameworks/: langchain-integration.md
docs-v2/quick-start/: setup.md  (+2 more)
examples/: __init__.py  advanced_usage.py  basic_usage.py  init_examples.py  integration_examples.py  token_counting_example.py
synqui/: __init__.py  analytics.py  auto_instrumentation.py  batch_processor.py  chat_session.py  config.py  decorators.py  langchain.py  langgraph.py  models.py  sdk.py  serialization.py  token_counter.py  trace_collector_unified.py  utils.py  workflow.py
vaquero/: __init__.py  analytics.py  auto_instrumentation.py  batch_processor.py  chat_session.py  config.py  cost_calculator.py  decorators.py  langchain.py  langgraph.py  models.py  sdk.py  serialization.py  token_counter.py  trace_collector_unified.py  trace_collector_v2.py  workflow.py
(+15 files in other folders)
