[project]
name = "article-explainer"
version = "0.1.0"
description = "A multi-agent project for development articles explanation."
authors = [
    { name = "Duarte Cardoso", email = "caldasdcardoso@gmail.com" }
]
readme = "README.md"

dependencies = [
    "langgraph",
    "langgraph-swarm",
    "ruff>=0.13.0",
    "langchain_openai",
    "langchain_community",
    "langchain_text_splitters",
    "langchain",
    "langchain_google_genai",
    "streamlit",
    "pypdf",
    "langchain_ollama",
    "streamlit-pdf-viewer>=0.0.26",
    "synqui-sdk",
]

[tool.uv.sources]
synqui-sdk = { path = "../../sdk", editable = true }

[tool.uv]
